language_tests/source_files/valid/struct_move_into_field.tr
func check(_ cond: bool, _ msg: string) {
    if !cond {
        std.panic.panic(msg)
    }
}

struct Raw {
    value: int32
}

struct Wrap {
    inner: Raw
}

func makeFromLocal() -> Wrap {
    let raw = Raw { value: 7 }
    Wrap { inner: raw }
}

func makeFromResult() -> Wrap {
    let res: Result[Raw, int32] = .ok(Raw { value: 9 })
    match res {
        case .ok(raw) => Wrap { inner: raw }
        case .err(_) => Wrap { inner: Raw { value: -1 } }
    }
}

func main() {
    let a = makeFromLocal()
    check(a.inner.value == 7, "move from local into struct field failed")

    let b = makeFromResult()
    check(b.inner.value == 9, "move from result binding into struct field failed")
}
